# ScrabbleML

./: .gitignore  LICENSE  README.md  pyproject.toml
dictionaries/: en_small.txt  fr_small.txt
models/cnn_checkpoint/: cnn_ocr.pt
src/scrabble/: __init__.py  augment_rare_letters.py  board.py  cli.py  cnn_ocr.py  detect_mislabels.py  move_generator.py  ocr.py  scoring.py  webapp.py
src/static/css/: style.css
src/static/js/: app.js  labeler.js  play.js
src/templates/: index.html  labeler.html  play.html
tests/move/: test_best_placements.py  test_cross_word_scoring.py  test_cross_word_validation.py  test_lang_scoring.py  test_main_word_extension_validation.py  test_move_generator_step1.py  test_smoke.py
tests/ocr/: test_ocr_picture_CNN.py  test_ocr_picture_Tesseract.py
webdata/: cnn_manifest_flat.jsonl
webdata/label_store/: label_manifest.jsonl
